fluxcd/base/kafdrop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: kafdrop
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kafdrop
      annotations:
        fluentbit.io/exclude: "true"
    spec:
      containers:
        - name: kafdrop
          image: docker.io/obsidiandynamics/kafdrop
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
          startupProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 300
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            periodSeconds: 60
            timeoutSeconds: 2
            failureThreshold: 2
          resources:
            limits:
              cpu: 200m
              memory: 300Mi
            requests:
              cpu: 10m
              memory: 300Mi
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 5
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 10Mi
